# IBM-DataEngineer-CapstoneProject

./: .gitignore  README.md  pyproject.toml
ibm_dataengineer_capstoneproject/BigDataAnalytics/: Spark_MLOps.ipynb
ibm_dataengineer_capstoneproject/BigDataAnalytics/Docker/: docker-compose.yml  start-spark.sh
ibm_dataengineer_capstoneproject/DataPipelines/airflow/: dag.py  docker-compose.yaml  setup.sh
ibm_dataengineer_capstoneproject/DataPipelines/scripts/: automation.py  mysqlconnect.py  postgresqlconnect.py  restore.sh
ibm_dataengineer_capstoneproject/DataWarehouse/: docker-compose.pgsql.yml
ibm_dataengineer_capstoneproject/DataWarehouse/scripts/: insert.py
ibm_dataengineer_capstoneproject/DataWarehouse/sql/: aggregating.sql  softcartDimTables.sql  softcartFactTables.sql
ibm_dataengineer_capstoneproject/NoSQL/: docker-compose.mongo.yml
ibm_dataengineer_capstoneproject/NoSQL/data/: mongoexport.csv  source.json
ibm_dataengineer_capstoneproject/NoSQL/libs/: MongoDB.py
ibm_dataengineer_capstoneproject/NoSQL/scripts/: tools.sh
ibm_dataengineer_capstoneproject/OLTP_Db/: docker-compose.mysql.yml
ibm_dataengineer_capstoneproject/OLTP_Db/data/: oltpdata_transformed.csv
ibm_dataengineer_capstoneproject/OLTP_Db/scripts/: export.sh  import.py
ibm_dataengineer_capstoneproject/OLTP_Db/sql/: dump_file.sql  sales_data.sql
