[tool.poetry]
name = "ibm-dataengineer-capstoneproject"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
sqlalchemy = "^2.0.31"
pymysql = "^1.1.1"
cryptography = "^42.0.8"
pymongo = "^4.8.0"
loguru = "^0.7.2"
psycopg2-binary = "^2.9.9"
faker = "^26.0.0"
apache-airflow = { version = "2.9.3", python = ">=3.8,<3.13" }


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
blue = "^0.9.1"
isort = "^5.13.2"
taskipy = "^1.13.0"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.5.28"
mkdocstrings = "^0.25.1"
mkdocstrings-python = "^1.10.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
